# proa

./: Cargo.toml
assets/: CREDIT.md
src/: boids.rs  lib.rs  main.rs  pebbles.rs  postprocess.rs  rng.rs  shader.rs  sprite.rs  texture.rs
src/shaders/: joint.frag  joint.vert  pebbles.frag  postprocess.vert  sprite.frag  sprite.vert  water.frag
