[package]
name = "proa"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["glazer/hot-reload", "glow/debug_automatic_glGetError"]
model = []

[dependencies]
glazer = { path = "../blaze/crates/glazer", default-features = false, features = [
	"opengl",
] }
glam = "0.30"
glow = "0.16"

[dev-dependencies]
glazer = { path = "../blaze/crates/glazer" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.100"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
